Changes for 1.3.1.1
* Added more ways to get mac addresses to macFinder. (veqryn)

* Got lobby actions to correctly be logged, and fixed bug in banning system. (wisconsin)

* Fixed all issues surrounding macFinder. (veqryn)

* Updated packaged java JRE to java 6 update 25. (veqryn)

* Added ability to remove games from the lobby screen. (wisconsin)

* Fixed error for old java versions that were unable to access online lobby. (wisconsin)

* Created new unit attachment, createsUnitsList, which allows automatic creation of units by other units at end of turn. (veqryn)

* Fixed unitAttachment validation to allow factories to have maxDamage. (veqryn)

* Fixed build.xml to work for macRelease. (veqryn)


Changes for 1.3.1.0
* Fixed "what should bomber bomb" AI error, in all AIs. Also fixed bug in easy ai where it would not place any units if some were bunkers. (veqryn)

* Fixed moore AI and easy AI to use new repairing method when trying to repair unit damage instead of territory damage. (veqryn)

* Some updates for Dynamix AI, and fixed AI bug caused by more than one map was opened per TripleA instance, and Added a Resource Collection Increaser cheat. (wisconsin)

* Finished making repair rules work for both damage done to units and damage done to territories. 
  A note to map makers: repair rules should mention the actual unit, not a _hit version of the unit.  This means all repair rules that mention "factory_hit" will need to be changed to mention "factory". (veqryn)

* Initial work on making repair rules work for damage done to units. (veqryn)

* Fixed null pointer in moore ai for games which don't have carriers. (veqryn)

* Added method to unit class to find territory unit is in. (veqryn)

* Fixed moore AI and easy AI to not purchase any unit which has consumesUnits. (veqryn)

* Fixed bug in scrambling code where user was not being asked if they want to scramble. (veqryn)

* Fixed infinite loop introduced into original factory owner check. (veqryn)
