@@ -1,9 +1,13 @@
 Changes for 1.3.1.1
-* Added more ways to get mac addresses to macFinder. (veqryn)
+* Fixed paratrooper loading creating multiple copies of units. Fixed bugs for deselection of paratroopers and air. (veqryn)
+
+* Fixed minor bugs, including units having to roll to kill unescorted transports. (veqryn)
+
+* Added more ways to get user info for connecting to the lobby on older max-os / unix machines. (veqryn)
 
 * Got lobby actions to correctly be logged, and fixed bug in banning system. (wisconsin)
 
-* Fixed all issues surrounding macFinder. (veqryn)
+* Fixed all issues surrounding connecting to the lobby. (veqryn)
 
 * Updated packaged java JRE to java 6 update 25. (veqryn)
 
